--- a/Weeklys.WebMVC/Views/MoneyFlow/Index.cshtml
+++ b/Weeklys.WebMVC/Views/MoneyFlow/Index.cshtml
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.CreatedUtc)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id = item.MoneyFlowID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.MoneyFlowID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.MoneyFlowID })
             </td>
         </tr>
     }
