--- a/Weeklys.WebMVC/Views/Paychecks/Edit.cshtml
+++ b/Weeklys.WebMVC/Views/Paychecks/Edit.cshtml
@@ -15,13 +15,7 @@
     <h4>PaychecksEdit</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.PaychecksID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.PaychecksID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.PaychecksID, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    @Html.HiddenFor(model => model.PaychecksID)
 
     <div class="form-group">
         @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
