Revert "Misc, and right before adding STYLING"
This reverts commit 562c7b8263661549aa974f7753ad9b00aa250ec0.

--- a/Weeklys.WebMVC/Views/Taxes/Create.cshtml
+++ b/Weeklys.WebMVC/Views/Taxes/Create.cshtml
@@ -16,10 +16,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.MoneyFlowID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TaxesID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MoneyFlowID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MoneyFlowID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.TaxesID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TaxesID, "", new { @class = "text-danger" })
             </div>
         </div>
 
