--- a/Weeklys.WebMVC/Views/Home/Index.cshtml
+++ b/Weeklys.WebMVC/Views/Home/Index.cshtml
@@ -1,1 +1,3 @@
-﻿<img src="~/Content/Images/DSC_2112.JPG" width="1000"/>
+﻿@{ ViewBag.Title = "Home Page"; }
+
+<img src="~/Content/Images/DSC_2112.JPG" width="1000" />
